--- a/MyDictionaries.xaml
+++ b/MyDictionaries.xaml
@@ -12,7 +12,7 @@
             <Line Stroke="Black" X1="1" X2="1" Y1="0" Y2="380" Height="380"/>
             <StackPanel Width="240" Orientation="Vertical">
                 <Line Stroke="Black" X1="0" X2="480" Y1="1" Y2="1"/>
-                <TextBlock Text="Tables" FontSize="48" Height="80" TextAlignment="Center"/>
+                <TextBlock Text="Tables" FontSize="48" Height="80" TextAlignment="Center" Padding="0,5,0,0"/>
                 <Line Stroke="Black" X1="0" X2="240" Y1="1" Y2="1"/>
                 <ScrollViewer VerticalScrollBarVisibility="Auto">
                     <ListView Name="Tables" Height="298" SelectionMode="Single" BorderBrush="Black" SelectionChanged="Tables_SelectionChanged">
