--- a/MyDictionaries.xaml
+++ b/MyDictionaries.xaml
@@ -33,6 +33,7 @@
                         <ListView.ItemContainerStyle>
                             <Style TargetType="ListViewItem">
                                 <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                                <Setter Property="FontSize" Value="22"/>
                                 <Setter Property="Background" Value="#EDC7B7"/>
                                 <Setter Property="Foreground" Value="#AC3B61"/>
                                 <Setter Property="FontFamily" Value="Forte"/>
@@ -58,6 +59,7 @@
                             <ListView.ItemContainerStyle>
                                 <Style TargetType="ListViewItem">
                                     <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                                    <Setter Property="FontSize" Value="22"/>
                                     <Setter Property="Background" Value="#EDC7B7"/>
                                     <Setter Property="Foreground" Value="#AC3B61"/>
                                     <Setter Property="FontFamily" Value="Buxton Sketch"/>
